--- a/.github/workflows/add-trailer.yml
+++ b/.github/workflows/add-trailer.yml
@@ -62,7 +62,6 @@ jobs:
                 throw new Error(`No open PR found for ${headBranch}`)
               }
               pr = matchingPRs[0];
-              console.log(pr);
 
               const actor = context.payload.workflow_run.triggering_actor.login;
               const req = await fetch(`https://api.github.com/users/${actor}`);
@@ -71,7 +70,7 @@ jobs:
             }
 
             return {
-              commits: String(pr.commits),
+              base_sha: pr.base.sha,
               head_repo: pr.head.repo.full_name,
               head_ref: pr.head.ref,
               trailer: trailer,
@@ -88,7 +87,7 @@ jobs:
       - name: Amend all pull request commits with the trailer
         env:
           GIT_TRAILER_DEBUG: 1
-          COMMITS: ${{ fromJSON(steps.info.outputs.result).commits }}
+          BASE_SHA: ${{ fromJSON(steps.info.outputs.result).base_sha }}
           HEAD_REF: ${{ fromJSON(steps.info.outputs.result).head_ref }}
           TRAILER: ${{ fromJSON(steps.info.outputs.result).trailer }}
         run: |
@@ -123,7 +122,7 @@ jobs:
           rm -f .git/hooks/commit-msg
           ln -s ../../devtools/commit-msg .git/hooks/commit-msg
 
-          git rebase "HEAD~$COMMITS" \
+          git rebase "$BASE_SHA" \
             --exec "git commit -C HEAD --no-edit --amend --trailer='$TRAILER'"
 
           git push --force origin "$HEAD_REF"
