--- a/.github/workflows/add-trailer.yml
+++ b/.github/workflows/add-trailer.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   add-trailer:
-    if: |
+    if: >-
       ${{ (github.event_name == 'issue_comment' && github.event.issue.pull_request
           && (contains(github.event.comment.body, 'Acked-by:') || contains(github.event.comment.body, 'Tested-by:')))
       || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') }}
@@ -27,6 +27,7 @@ jobs:
         id: info
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.TRAILER_BOT_TOKEN }}
           script: |
             let pr, trailer;
 
@@ -61,16 +62,27 @@ jobs:
               if (matchingPRs.length === 0) {
                 throw new Error(`No open PR found for ${headBranch}`)
               }
-              pr = matchingPRs[0];
+              const { data: prData } = await github.rest.pulls.get({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: matchingPRs[0].number
+              });
+              pr = prData;
 
               const actor = context.payload.workflow_run.triggering_actor.login;
-              const req = await fetch(`https://api.github.com/users/${actor}`);
-              const user = await req.json();
-              trailer = `Reviewed-by: ${user.name || actor} <${user.email || 'UNKNOWN_EMAIL'}>`;
+              const { data: user } = await github.rest.users.getByUsername({
+                username: actor
+              });
+
+              if (!user.name) {
+                throw new Error(`User ${actor} does not expose their full name`);
+              }
+
+              trailer = `Reviewed-by: ${user.name} <${user.email || 'UNKNOWN_EMAIL'}>`;
             }
 
             return {
-              base_sha: pr.base.sha,
+              commits: pr.commits,
               head_repo: pr.head.repo.full_name,
               head_ref: pr.head.ref,
               trailer: trailer,
@@ -87,7 +99,7 @@ jobs:
       - name: Amend all pull request commits with the trailer
         env:
           GIT_TRAILER_DEBUG: 1
-          BASE_SHA: ${{ fromJSON(steps.info.outputs.result).base_sha }}
+          COMMITS: ${{ fromJSON(steps.info.outputs.result).commits }}
           HEAD_REF: ${{ fromJSON(steps.info.outputs.result).head_ref }}
           TRAILER: ${{ fromJSON(steps.info.outputs.result).trailer }}
         run: |
@@ -122,7 +134,7 @@ jobs:
           rm -f .git/hooks/commit-msg
           ln -s ../../devtools/commit-msg .git/hooks/commit-msg
 
-          git rebase "$BASE_SHA" \
+          git rebase "HEAD~$COMMITS" \
             --exec "git commit -C HEAD --no-edit --amend --trailer='$TRAILER'"
 
           git push --force origin "$HEAD_REF"
